fix alignment of headers and footer cleanup

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -2,14 +2,13 @@ footer {
   padding: 0;
   .footer_logo {
     margin-top: 3rem;
-    margin-top: 3rem;
+    margin-left: 3rem;
 
     & > * {
       margin: 1rem 0;
     }
   }
   img {
-    // width: 15vw;
     width: 50px;
   }
 
